--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Employee Directory</string>
-    <string name="ok">OK</string>
     <string name="biography_label">Biography:</string>
     <string name="email_label">Email:</string>
     <string name="phone_number_label">Phone Number:</string>
@@ -10,9 +9,10 @@
     <string name="part_time_employee">Part time employee</string>
     <string name="contractor_employee">Contract employee</string>
 
-    <string name="oops">Oops!</string>
     <string name="something_went_wrong">Something went wrong.</string>
-    
+    <string name="no_employees_found">No Employees were found!</string>
+    <string name="try_again">Try Again</string>
+
     <string name="select_data">Select Data</string>
     <string name="data_default">Default</string>
     <string name="data_malformed">Malformed</string>
